2014-09-01  Yury Gribov  <y.gribov@samsung.com>

	PR sanitizer/61897
	PR sanitizer/62140
	* c-c++-common/asan/pr62140-1.c: New test.
	* c-c++-common/asan/pr62140-2.c: New test.

2014-08-31  Fritz Reese  <Reese-Fritz@zai.com>
	    Tobias Burnus  <burnus@net-b.de>

	PR fortran/62309
	* gcc/testsuite/gfortran.dg/auto_save_2.f90: New.

2014-08-31  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/coarray_lib_comm_1.f90: New.

2014-08-30  Andrew Pinski  <apinski@cavium.com>

	* gcc.c-torture/execute/20140828-1.c: New testcase.

2014-08-29  DJ Delorie  <dj@redhat.com>

	* lib/target-supports.exp (check_effective_target_size32plus):
	Increase size to avoid false positives on 24-bit address spaces.
	* gcc.c-torture/compile/limits-stringlit.c: Skip if msp430.
	* gcc.dg/lto/pr54709_1.c: Fix memcpy prototype.
	* gcc.dg/torture/pta-ptrarith-3.c: Use __SIZE_TYPE__ instead of "int".
	* gcc.dg/torture/pr36373-10.c: Use __SIZE_TYPE__ if present.
	* gcc.dg/torture/pr57864.c: Use __SIZE_TYPE__.
	* gcc.dg/torture/pr26763-2.c: Use __SIZE_TYPE__ instead of "int".
	* gcc.dg/tree-ssa/isolate-3.c: Use __SIZE_TYPE__ instead of "long unsigned int".
	* gcc.dg/pr52549.c: Use __SIZE_TYPE__ if present.

2014-08-29  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/54002
	* g++.dg/cpp0x/constexpr-54002.C: New.

2014-08-29  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/56991
	* g++.dg/cpp0x/constexpr-56991.C: New.

2014-08-29  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/57764
	* g++.dg/cpp0x/constexpr-57764.C: New.

2014-08-29  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/59938
	* g++.dg/cpp0x/constexpr-59938.C: New.

2014-08-29  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/61484
	* g++.dg/cpp0x/constexpr-61484.C: New.

2014-08-28  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gcc.target/powerpc/builtins-1.c: Add tests for vec_xl, vec_xst,
	vec_round, vec_splat, vec_div, and vec_mul.
	* gcc.target/powerpc/builtins-2.c: New test.
