@@ -1,4 +1,7 @@
-/* { dg-options "-mtune-i686" { target { { i?86*-*-* } && ilp32 } } } */
+/* { dg-options "-mtune=i686" { target { { i?86*-*-* } && ilp32 } } } */
+
+extern void abort (void);
+extern void exit (int);
 
 long baz1 (void *a)
 {
